--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,26 @@ let myColor="yellow";
 let currentRoom=null;
 
 const positions = [
-{x:140,y:610},{x:140,y:500},{x:140,y:390},{x:140,y:280},{x:140,y:170},
-{x:200,y:120},{x:320,y:100},{x:450,y:100},{x:580,y:100},{x:710,y:100},
-{x:830,y:130},{x:900,y:230},{x:900,y:350},{x:900,y:470},{x:830,y:610},
-{x:700,y:610},{x:580,y:610},{x:450,y:610},{x:320,y:610},{x:200,y:610}
+{x:120,y:620},  // 1 старт
+{x:120,y:520},
+{x:120,y:420},
+{x:120,y:320},
+{x:120,y:220},
+{x:120,y:120},
+{x:240,y:100},
+{x:380,y:100},
+{x:520,y:100},
+{x:660,y:100},
+{x:800,y:120},
+{x:900,y:240},
+{x:900,y:380},
+{x:900,y:520},
+{x:800,y:620},
+{x:660,y:620},
+{x:520,y:620},
+{x:380,y:620},
+{x:240,y:620},
+{x:120,y:620}
 ];
 
 function setColor(c){ myColor=c; }
